--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "eslint-config-next": "13.5.1",
     "framer-motion": "^11.0.14",
     "input-otp": "^1.2.4",
-    "lucide-react": "^0.446.0",
-    "next": "13.5.1",
+    "lucide-react": "^0.293.0",
+    "next": "^13.5.6",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
